--- a/package.json
+++ b/package.json
@@ -14,15 +14,19 @@
     "react-dom": "^19.1.1"
   },
   "devDependencies": {
-    "node-loader": "^2.0.0",
     "@eslint/js": "^9.32.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
+    "@types/testing-library__react": "^10.0.1",
     "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "node-loader": "^2.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.1.0"
