Add MCP glyph type and integrate use-mcp SDK
Introduces MCPGlyph, MCPGlyph_, and MCPProperties for MCP glyph support. Updates package.json to include use-mcp and @modelcontextprotocol/sdk dependencies, and refactors related components to support MCP glyph integration.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "use-mcp": "0.0.21",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
