--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@anthropic-ai/claude-agent-sdk": "^0.2.63",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "use-mcp": "0.0.21",
